# python-django-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  run-local.sh
.github/workflows/: ci.yaml
api/common/: routers.py
api/config/: application.py  security.py  settings.py
